--- a/ndc-mobile-scanning-app/package.json
+++ b/ndc-mobile-scanning-app/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "expo": "~51.0.18",
+    "expo-camera": "~15.0.13",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3",
-    "expo-camera": "~15.0.13"
+    "react-native": "0.74.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
