--- a/ndc-mobile-scanning-app/package.json
+++ b/ndc-mobile-scanning-app/package.json
@@ -13,7 +13,8 @@
     "expo-camera": "~15.0.13",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-simple-bottom-sheet": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
